--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body{
     font-family: 'Dongle', sans-serif;
+    margin: 0%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
 }
 h1{
     font-size: 60px;
@@ -16,4 +21,16 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+section{
+    height: 500px;
+}
+.a-button{
+    text-decoration: none;
+    background-color: orange;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: whitesmoke;
+    font-weight: 700;
+    background-image: linear-gradient( 25deg, lightSalmon, tomato );
 }
