--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body{
     background-repeat: no-repeat;
 }
 h1{
-    font-size: 60px;
+    font-size: 50px;
 }
-.nameHighlinght{
+.orange-highlinght{
     font-family: 'Fruktur', cursive;
     color: orange;
 }
@@ -20,7 +20,8 @@ h1{
     padding-left: 2%;
 }
 .half-width img{
-    width: 100%;
+    width: 80%;
+    margin-top: 5%;
 }
 section{
     height: 500px;
@@ -33,4 +34,57 @@ section{
     color: whitesmoke;
     font-weight: 700;
     background-image: linear-gradient( 25deg, lightSalmon, tomato );
+}
+
+.middle-banner{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+p, h1, h2{
+    color: dimgray;
+}
+
+.experience-area{
+    margin-top: 5%;
+}
+
+.orange-highlinght2{
+    color: orange;
+}
+
+.Experiences{
+    margin-left: 7%;
+    font-family: 'Fruktur', cursive;
+    color:tomato;
+    font-size: 50px;
+}
+.single-experiences{
+    box-shadow: 10px 10px 500px gray ;
+    border-radius: 5px;
+    height: 70%;
+    background-color: whitesmoke;
+}
+.experience-area{
+    background-image: url(./images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.p-alingment{
+    margin: 10px 10px;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, tomato, rgb(9, 93, 121));
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(9, 93, 121), tomato);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
+    margin-bottom: 1%;
 }
